content/stylesheet.css
/* Provided by Google Fonts */
* {
  font-family: 'Cabin', 'sans-serif';
}

body {
  background: url(/static/imgs/IMG_2240_gray.jpg) no-repeat center center fixed;
  background-size: cover;
}

.page {
  text-align: left;
}

#main {
  background: rgba(155, 155, 155, 0.9);
}

#sa-cdc-navbar-collapse {
  padding-left: 180px;
  font-size: 1.5em;
}

.sa-cdc-utility {
  padding-right: 80px;
  font-size: 1em;
  text-align: right;
}

.brand {
  margin: 15px 0px 0px 0px;
  position: absolute;
  z-index: 100;
}

.carousel-inner > .item > img { margin: 0 auto; }
footer{
	border-top: 1px dashed #CCCCCC;
	margin: 40px 0px;
	padding: 20px 0px;
}
/*  Attempting to fix height of footer */
.demo{
    margin-bottom: -99999px;
    padding-bottom: 99999px;
}

img.social-media {
    margin: 10px 10px 10px 10px;
    max-width: 50px;
    max-height: 50px;
}

img.partner {
  height: auto;
  width: auto;
  max-height: 140px;
  max-width: 340px;
}

p.partner {
  background-color: rgb(87, 82, 82);
  width: 356px;
  height: 150px;
}

/**
 * Vertical align image.
 **/
span.partner {
  display: inline-block;
  vertical-align: middle;
  height: 100%;
}

.equal {
    overflow: hidden; 
}


/*
 * Link colors, make it pop on gray background.
 */

a:link { color: #0079C1; }

a:active { color: #5AC1FF; }

a:visited { color: #0079C1; }

